@@ -1,3 +1,12 @@
+2009-01-08  Ramon Novoa  <rnovoa@artica.es>
+
+	* include/functions.php,
+	  pandoradb.sql,
+	  operation/agentes/estado_alertas.php,
+	  operation/agentes/estado_monitores.php,
+	  operation/agentes/ver_agente.php: Added support for forced alert
+	  execution.
+
 2009-01-07  Evi Vanoost  <vanooste@rcbi.rochester.edu>
 
 	* include/functions.php: Removed safe_sql_string. Cleaned documenation so
